// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputSlider props should render type 'background' 1`] = `
<div
  class="input-slider"
>
  <input
    max="20"
    min="1"
    step="0.1"
    type="range"
  />
   
  <span
    class="track"
  />
    
  <span
    class="thumb"
    style="left: -5.2631578947368425%; background-color: rgb(255, 255, 255); border-color: #fff;"
  />
   
</div>
`;

exports[`InputSlider props should render type 'borderColor' 1`] = `
<div
  class="input-slider"
>
  <input
    max="20"
    min="1"
    step="0.1"
    type="range"
  />
   
  <span
    class="track"
  />
    
  <span
    class="thumb"
    style="left: -5.2631578947368425%; background-color: rgb(43, 138, 198); border-color: #fff;"
  />
   
</div>
`;

exports[`InputSlider props should render type 'pins' 1`] = `
<div
  class="input-slider"
>
  <input
    max="20"
    min="1"
    step="0.1"
    type="range"
  />
   
  <span
    class="track"
  />
   
  <span
    class="pin"
    style="left: 100%;"
  >
    
    pin-label-1
  
  </span>
  <span
    class="pin"
    style="left: 400%;"
  >
    
    pin-label-2
  
  </span>
   
  <span
    class="thumb"
    style="left: -5.2631578947368425%; background-color: rgb(43, 138, 198); border-color: #fff;"
  />
   
</div>
`;

exports[`InputSlider props should render type 'step' 1`] = `
<div
  class="input-slider"
>
  <input
    max="20"
    min="1"
    step="1"
    type="range"
  />
   
  <span
    class="track"
  />
    
  <span
    class="thumb"
    style="left: -5.2631578947368425%; background-color: rgb(43, 138, 198); border-color: #fff;"
  />
   
</div>
`;

exports[`InputSlider props should render type 'value' 1`] = `
<div
  class="input-slider"
>
  <input
    max="20"
    min="1"
    step="0.1"
    type="range"
  />
   
  <span
    class="track"
  />
    
  <span
    class="thumb"
    style="left: 10.526315789473685%; background-color: rgb(43, 138, 198); border-color: #fff;"
  />
   
</div>
`;

exports[`InputSlider props should render without props 1`] = `
<div
  class="input-slider"
>
  <input
    max="100"
    min="0"
    step="0.1"
    type="range"
  />
   
  <span
    class="track"
  />
    
  <span
    class="thumb"
    style="left: 0%; background-color: rgb(43, 138, 198); border-color: #fff;"
  />
   
</div>
`;
